# spikeless

./: .gitignore  LICENSE  README.md  SpikeRemover.bat  Spikeless.bat  pyproject.toml  uninstall.bat
src/spikeless/: __init__.py  adjust.py  app.py  dataset.py  io_gina.py  peaks.py  plotting.py  plotview.py  viz.py
src/spikeremover/: __init__.py  __main__.py  app.py  dataset.py  io_gina.py  peaks.py  plotting.py  plotview.py  spikes.py
