[project]
name = "spikeremover"
version = "1.0.0"
description = "Spikeless — radio-HPLC plotting, spike removal and peak analysis for GINA X exports"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "openpyxl>=3.1",
]

[project.scripts]
spikeremover = "spikeremover.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spikeremover"]
